# Blackhole-Project

BlackHole/: CMakeLists.txt
BlackHole/include/: Particle.hpp
BlackHole/src/: Particle.cpp  main.cpp
